--- a/src/app/i18n/locales/tw.json
+++ b/src/app/i18n/locales/tw.json
@@ -827,7 +827,20 @@
       "autosaveVersions": "{{count}}/{{total}} 自動儲存版本",
       "restoreVersion": "復原版本",
       "downloadVersion": "下載版本",
-      "deleteVersion": "刪除版本"
+      "deleteVersion": "刪除版本",
+      "deleteVersionTitle": "刪除版本",
+      "deleteButton": "刪除",
+      "restoreButton": "復原",
+      "downloadError": "下載版本失敗",
+      "deleteVersionAdvice": "此版本將被永久刪除。\n此操作無法復原。",
+      "deletingVersion": "刪除中",
+      "restoreVersionTitle": "復原版本",
+      "restoreVersionAdvice": "復原此版本將取代目前檔案並刪除所有較新的版本。\n一旦復原，此操作無法撤銷。\n\n您可以在復原之前下載較新版本的副本。",
+      "restoringVersion": "復原中",
+      "restoreSuccess": "版本復原成功",
+      "restoreError": "復原版本失敗",
+      "deleteSuccess": "版本刪除成功",
+      "deleteError": "刪除版本失敗"
     },
     "shareModal": {
       "title": "分享“{{name}}”",
