feature: Add automatic trash disposal notification dialog
  Implement an informational modal that notifies users about the new automatic trash disposal
  feature. The dialog displays tier-based retention periods (1 day for free users, 7 days for
  essential, 14 days for premium, and 30 days for ultimate users).

  - Create AutomaticTrashDisposalDialog component with responsive dark mode styling
  - Add UI state management for dialog visibility
  - Display modal only to existing users (excludes new signups)
  - Add translation keys for dialog content
  - Integrate dialog into Trash view with proper state handling

--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -1248,6 +1248,28 @@
     "item-menu": {
       "restore": "Restore",
       "delete-permanently": "Delete permanently"
+    },
+    "automaticDisposal": {
+      "badge": "New update",
+      "title": "Automatic Trash disposal",
+      "close": "Close",
+      "description": "Now all the items moved to Trash will be\npermanently deleted automatically after:",
+      "freeUsers": {
+        "duration": "1 day",
+        "label": "for free users"
+      },
+      "essentialUsers": {
+        "duration": "7 days",
+        "label": "for essential users"
+      },
+      "premiumUsers": {
+        "duration": "14 days",
+        "label": "for premium users"
+      },
+      "ultimateUsers": {
+        "duration": "30 days",
+        "label": "for ultimate users"
+      }
     }
   },
   "tasks": {
