feature: add auto-delete column to trash view
  Add a new "Auto-delete" column in the trash list that displays the number of days until an item is
  permanently deleted. The column shows "In X day(s)" with a warning icon, and highlights items in red when
  they have 2 days or less remaining.

  Changes:
  - Add caducityDate field to DriveFileData and DriveFolderData types
  - Add "Auto-delete" translation key to English locale
  - Create skinSkeletonTrash for trash view loading state
  - Add auto-delete column header to trash list (non-orderable)
  - Display auto-delete countdown with WarningCircle icon in list items
  - Calculate days until deletion from caducityDate field
  - Apply red text styling for urgent items (≤2 days remaining)

--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -1536,7 +1536,8 @@
         "name": "Name",
         "modified": "Modified",
         "size": "Size",
-        "actions": "Actions"
+        "actions": "Actions",
+        "autoDelete": "Auto-delete"
       }
     },
     "viewMode": {
