--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -1249,6 +1249,10 @@
       "restore": "Restore",
       "delete-permanently": "Delete permanently"
     },
+    "autoDelete": {
+      "inDays_one": "In {{count}} day",
+      "inDays_other": "In {{count}} days"
+    },
     "automaticDisposal": {
       "badge": "New update",
       "title": "Automatic Trash disposal",
