fix: error message when downloading an item fails

--- a/src/app/i18n/locales/es.json
+++ b/src/app/i18n/locales/es.json
@@ -1352,7 +1352,7 @@
     },
     "generalErrorMessages": {
       "retryUploadFailed": "Algo salió mal al reintentar la subida. Intenta subirlo de nuevo",
-      "retryDownloadFailed": "Algo salió mal al reintentar la subida. Intenta la descarga de nuevo",
+      "retryDownloadFailed": "Algo salió mal al reintentar la descarga. Intenta la descarga de nuevo",
       "openUploadedFileFailed": "Algo salió mal al intentar abrir el archivo",
       "openUploadedFolderFailed": "Algo salió mal al intentar navegar hasta la carpeta"
     }
