feat: add locked feature modal and versioning enhancements
- Added a locked feature modal to inform users about version restoration capabilities in paid plans.
- Updated i18n translations for the new locked feature.
- Refactored file version service imports and related tests.
- Enhanced version history menu configuration to handle locked states.
- Implemented dropdown positioning hook for better UI interactions.
- Added tests for version item actions and dropdown positioning.
- Integrated version limits fetching in the PlansSection for better user experience.

--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -905,7 +905,13 @@
       "restoreSuccess": "Version restored successfully",
       "restoreError": "Failed to restore version",
       "deleteSuccess": "Version deleted successfully",
-      "deleteError": "Failed to delete version"
+      "deleteError": "Failed to delete version",
+      "lockedFeature": {
+        "title": "Locked feature",
+        "description": "Restore previous versions of your files and track changes over time.",
+        "supportedFormats": "Available for PDF, Word, Excel, and CSV files in paid plans.",
+        "upgradeButton": "Upgrade"
+      }
     },
     "shareModal": {
       "title": "Share \"{{name}}\"",
