--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -853,7 +853,13 @@
       "restoreSuccess": "Версия успешно восстановлена",
       "restoreError": "Не удалось восстановить версию",
       "deleteSuccess": "Версия успешно удалена",
-      "deleteError": "Не удалось удалить версию"
+      "deleteError": "Не удалось удалить версию",
+      "lockedFeature": {
+        "title": "Заблокированная функция",
+        "description": "Восстанавливайте предыдущие версии файлов и отслеживайте изменения со временем.",
+        "supportedFormats": "Доступно для файлов PDF, Word, Excel и CSV в платных тарифах.",
+        "upgradeButton": "Обновить"
+      }
     },
     "shareModal": {
       "title": "Поделиться \"{{name}}\"",
