feature: add file count translations for multiple languages in i18n files

--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -784,9 +784,13 @@
         "uploadedBy": "Hochgeladen von",
         "shared": "Freigegeben",
         "size": "Größe",
+        "numberOfFiles": "Anzahl der Dateien",
         "modified": "Geändert",
-        "Ort": "Ort"
-      }
+        "location": "Ort"
+      },
+      "fileCount_one": "{{count}} Datei",
+      "fileCount_other": "{{count}} Dateien",
+      "fileCountMoreThan1000": "Mehr als 1000 Dateien"
     },
     "shareModal": {
       "title": "Aktie \"{{name}}\"",
