Changed share german translation word

--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -789,7 +789,7 @@
       }
     },
     "shareModal": {
-      "title": "Aktie \"{{name}}\"",
+      "title": "\"{{name}}\" teilen",
       "list": {
         "peopleWithAccess": "Personen mit Zugang",
         "invite": "Einladen",
