--- a/src/app/i18n/locales/es.json
+++ b/src/app/i18n/locales/es.json
@@ -82,16 +82,19 @@
     "login": {
       "title": "Iniciar Sesión",
       "forgotPwd": "¿Olvidaste tu contraseña?",
-      "dontHaveAccount": "¿No tienes cuenta?",
+      "dontHaveAccount": "¿No tienes cuenta de Internxt?",
       "createAccount": "Crear cuenta",
       "2FA": "Código de dos factores",
       "twoFactorAuthenticationCode": "Código de autenticación de dos factores",
       "wrongLogin": "Nombre de usuario o contraseña no válidos",
       "failedToSendAuthData": "Error al enviar datos de autenticación. Por favor, inténtalo de nuevo."
     },
+    "button": {
+      "loginAction": "Iniciar sesión"
+    },
     "signup": {
       "title": "Crear cuenta",
-      "haveAccount": "¿Ya tienes una cuenta?",
+      "haveAccount": "¿Ya tienes una cuenta de Internxt?",
       "login": "Iniciar sesión",
       "encrypting": "Cifrando",
       "info": {
