--- a/src/app/i18n/locales/fr.json
+++ b/src/app/i18n/locales/fr.json
@@ -82,16 +82,19 @@
     "login": {
       "title": " Connexion ",
       "forgotPwd": "Mot de passe oublié?",
-      "dontHaveAccount": "Vous n'avez pas de compte ?",
+      "dontHaveAccount": "Vous n'avez pas de compte Internxt ?",
       "createAccount": "Créer un compte",
       "2FA": "Code à deux facteurs",
       "twoFactorAuthenticationCode": "Code d'authentification à deux facteurs",
       "wrongLogin": "Nom d'utilisateur ou mot de passe invalide",
       "failedToSendAuthData": "Échec de l'envoi des données d'authentification. Veuillez réessayer."
     },
+    "button": {
+      "loginAction": "Se connecter"
+    },
     "signup": {
       "title": "Créer un compte",
-      "haveAccount": "Vous avez déjà un compte ?",
+      "haveAccount": "Vous avez déjà un compte Internxt ?",
       "login": " Connexion ",
       "encrypting": "Encryptant",
       "info": {
