--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -82,16 +82,19 @@
     "login": {
       "title": "Войти",
       "forgotPwd": "Забыли пароль?",
-      "dontHaveAccount": "У вас нет учетной записи?",
+      "dontHaveAccount": "У вас нет учетной записи Internxt?",
       "createAccount": "Создать учетную запись",
       "2FA": "Двухфакторный код",
       "twoFactorAuthenticationCode": "Код двухфакторной аутентификации",
       "wrongLogin": "Неверное имя пользователя или пароль",
       "failedToSendAuthData": "Не удалось отправить данные аутентификации. Пожалуйста, попробуйте еще раз."
     },
+    "button": {
+      "loginAction": "Войти"
+    },
     "signup": {
       "title": "Создать учетную запись",
-      "haveAccount": "Уже есть аккаунт?",
+      "haveAccount": "Уже есть аккаунт Internxt?",
       "login": "Войти",
       "encrypting": "Идет шифрование",
       "info": {
