update translations for mobile version for login and signup

--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -82,7 +82,8 @@
     "login": {
       "title": "Anmelden",
       "forgotPwd": "Haben Sie Ihr Passwort vergessen?",
-      "dontHaveAccount": "Sie haben kein Internxt-Konto?",
+      "dontHaveAccount": "Sie haben kein Konto?",
+      "dontHaveAccountMobile": "Sie haben kein Internxt-Konto?",
       "createAccount": "Konto erstellen",
       "2FA": "Zwei-Faktor-Code",
       "twoFactorAuthenticationCode": "Zwei-Faktor-Authentifizierungscode",
@@ -94,7 +95,8 @@
     },
     "signup": {
       "title": "Konto erstellen",
-      "haveAccount": "Haben Sie bereits ein Internxt-Konto?",
+      "haveAccount": "Haben Sie bereits ein Konto?",
+      "haveAccountMobile": "Haben Sie bereits ein Internxt-Konto?",
       "login": "Anmelden",
       "encrypting": "Verschlüsselung im Gange",
       "info": {
