--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -103,7 +103,8 @@
     "login": {
       "title": "Login",
       "forgotPwd": "Forgot your password?",
-      "dontHaveAccount": "Don't have an Internxt account?",
+      "dontHaveAccount": "Don't have an account?",
+      "dontHaveAccountMobile": "Don't have an Internxt account?",
       "createAccount": "Create account",
       "2FA": "Two factor code",
       "twoFactorAuthenticationCode": "Two factor authentication code",
@@ -115,7 +116,8 @@
     },
     "signup": {
       "title": "Create account",
-      "haveAccount": "Already have an Internxt account?",
+      "haveAccount": "Already have an account?",
+      "haveAccountMobile": "Already have an Internxt account?",
       "login": "Login",
       "encrypting": "Encrypting",
       "info": {
