--- a/src/app/i18n/locales/es.json
+++ b/src/app/i18n/locales/es.json
@@ -82,7 +82,8 @@
     "login": {
       "title": "Iniciar Sesión",
       "forgotPwd": "¿Olvidaste tu contraseña?",
-      "dontHaveAccount": "¿No tienes cuenta de Internxt?",
+      "dontHaveAccount": "¿No tienes cuenta?",
+      "dontHaveAccountMobile": "¿No tienes cuenta de Internxt?",
       "createAccount": "Crear cuenta",
       "2FA": "Código de dos factores",
       "twoFactorAuthenticationCode": "Código de autenticación de dos factores",
@@ -94,7 +95,8 @@
     },
     "signup": {
       "title": "Crear cuenta",
-      "haveAccount": "¿Ya tienes una cuenta de Internxt?",
+      "haveAccount": "¿Ya tienes una cuenta?",
+      "haveAccountMobile": "¿Ya tienes una cuenta de Internxt?",
       "login": "Iniciar sesión",
       "encrypting": "Cifrando",
       "info": {
