--- a/src/app/i18n/locales/zh.json
+++ b/src/app/i18n/locales/zh.json
@@ -100,7 +100,8 @@
     "login": {
       "title": "登录",
       "forgotPwd": "忘记密码了？",
-      "dontHaveAccount": "没有 Internxt 账户？",
+      "dontHaveAccount": "没有账户？",
+      "dontHaveAccountMobile": "没有 Internxt 账户？",
       "createAccount": "创建账户",
       "2FA": "双因素代码",
       "twoFactorAuthenticationCode": "双因素验证码",
@@ -112,7 +113,8 @@
     },
     "signup": {
       "title": "创建账户",
-      "haveAccount": "已有 Internxt 账户？",
+      "haveAccount": "已有账户？",
+      "haveAccountMobile": "已有 Internxt 账户？",
       "login": "登录",
       "encrypting": "加密中",
       "info": {
