refactor: Improve rate limit retry mechanism with user feedback
  - Remove maxDelay option and related fallback logic
  - Simplify rate limit detection to only check status codes (429)
  - Update rate limit header from 'x-ratelimit-reset' to 'x-internxt-ratelimit-reset'
  - Remove limit and remaining fields from RateLimitInfo interface
  - Add user-facing toast notification on first retry attempt
  - Convert functions to arrow functions for consistency
  - Add HTTP_CODES.TOO_MANY_REQUESTS constant
  - Add JSDoc documentation to retryWithBackoff function
  - Add internationalization support for retry notification
  - Update tests to reflect new behavior and validate toast integration
  - Fix loop condition to prevent unreachable code

--- a/src/app/i18n/locales/de.json
+++ b/src/app/i18n/locales/de.json
@@ -1150,7 +1150,8 @@
       "copy-to-clipboard": "Link in die Zwischenablage kopiert",
       "link-updated": "Linkeinstellungen aktualisiert",
       "link-deleted": "Link gelöscht",
-      "links-deleted": "Link(s) gelöscht"
+      "links-deleted": "Link(s) gelöscht",
+      "rate-limit-retry": "Dies dauert länger als erwartet. Bitte warten..."
     }
   },
   "trash": {
