--- a/src/app/i18n/locales/ru.json
+++ b/src/app/i18n/locales/ru.json
@@ -1176,7 +1176,8 @@
       "link-updated": "Настройки ссылки обновлены",
       "link-deleted": "Ссылка удалена",
       "links-deleted": "Ссылка(и) удалена(ы)",
-      "error-deleting-links": "Возникла ошибка при удалении общих ссылок"
+      "error-deleting-links": "Возникла ошибка при удалении общих ссылок",
+      "rate-limit-retry": "Это занимает больше времени, чем ожидалось. Пожалуйста, подождите..."
     }
   },
   "trash": {
